Revert "Fix checkstyle warnings and critical LogsCenter bug"
This reverts commit 204fb0b58e925ce0cf770892a252a75499e2e292.